conf/iptables_07.14.2021.21.14.txt
# Generated by xtables-save v1.8.2 on Wed Jul 14 21:14:29 2021
*filter
:INPUT ACCEPT [823:66677]
:FORWARD DROP [40:2585]
:OUTPUT ACCEPT [686:79295]
-A FORWARD -s 10.0.10.113/32 -j ACCEPT
-A FORWARD -d 10.0.10.113/32 -j ACCEPT
-A FORWARD -m mark --mark 0x63 -j DROP
COMMIT
# Completed on Wed Jul 14 21:14:29 2021
# Generated by xtables-save v1.8.2 on Wed Jul 14 21:14:29 2021
*nat
:PREROUTING ACCEPT [41:3070]
:INPUT ACCEPT [39:2774]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [39:2733]
-A PREROUTING -s 10.0.10.113/32 -j ACCEPT
-A PREROUTING -p tcp -m mark --mark 0x63 -m tcp --dport 80 -j DNAT --to-destination 10.0.0.1
-A POSTROUTING -j MASQUERADE
COMMIT
# Completed on Wed Jul 14 21:14:29 2021
# Generated by xtables-save v1.8.2 on Wed Jul 14 21:14:29 2021
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:internet - [0:0]
-A PREROUTING -j internet
-A internet -j MARK --set-xmark 0x63/0xffffffff
COMMIT
# Completed on Wed Jul 14 21:14:29 2021
