conf/iptables_07.14.2021.txt
# Generated by xtables-save v1.8.2 on Wed Jul 14 15:39:12 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -i eth1 -p tcp -m mark --mark 0x3 -m tcp -j DNAT --to-destination 10.0.0.1
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Jul 14 15:39:12 2021
# Generated by xtables-save v1.8.2 on Wed Jul 14 15:39:12 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -o eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -o eth0 -m state --state INVALID -j DROP
COMMIT
# Completed on Wed Jul 14 15:39:12 2021
# Generated by xtables-save v1.8.2 on Wed Jul 14 15:39:12 2021
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:captiveportal - [0:0]
-A PREROUTING -i eth1 -p tcp -m tcp --dport 80 -j captiveportal
-A PREROUTING -i eth1 -p tcp -m tcp --dport 443 -j captiveportal
-A POSTROUTING -o eth1 -j TTL --ttl-set 1
-A POSTROUTING -s 10.0.0.1/32 -d 10.0.0.0/20 -j MARK --set-xmark 0x3/0xffffffff
-A POSTROUTING -s 10.0.0.1/32 -d 10.0.0.0/20 -j RETURN
COMMIT
# Completed on Wed Jul 14 15:39:12 2021
# Generated by xtables-save v1.8.2 on Wed Jul 14 15:39:12 2021
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Wed Jul 14 15:39:12 2021
